# sbSearchEngine

./: .gitignore  CMakeLists.txt  README.md  config.json  main.cpp  requests.json
include/: config.h  constants.h  functions.h  indexfile.h  lib.h  request.h
lib/: config.cpp  config.h  constants.h  constants.h.in  converterJSON.cpp  converterJSON.h  invertedindex.cpp  invertedindex.h  lib.cpp  lib.h  request.cpp  request.h  searchserver.cpp  searchserver.h  textdoc.cpp  textdoc.h
src/: CMakeLists.txt  config.cpp  functions.cpp  help_en.txt  help_ru.txt  indexfile.cpp  lib.cpp  main.cpp  request.cpp
tests/: CMakeLists.txt  answer.json  answer_ref.json  config_test.cpp  functions_test.cpp  indexfile_test.cpp  request_test.cpp  sbtest.cpp
tests/resources/: file000.txt  file001.txt
tests/test_resources/: config4test.json  file000.txt  file001.txt  file002.txt  req4test.json  req4test.txt
